--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <header>
             <h1>Sofie Johnsson</h1>
-            <h3>Student på väg mot nya möjligheter</h3>
+            <h3>Ny student på Medieinstitutet.</h3>
         </header>
 
         <img class="profile-image" src="img/20230919_215701.jpg">
