style: Used display: inline-block for skills list for horizontal flow

--- a/index.html
+++ b/index.html
@@ -8,40 +8,67 @@
 </head>
 <body>
 
-    <div id="profile-page">
+    <main>
 
         <header>
             <h1>Sofie Johnsson</h1>
-            <h3>Ny student på Medieinstitutet.</h3>
+            <p>New student at Medieinstitutet.<p>
+
         </header>
 
-        <img class="profile-image" src="img/20230919_215701.jpg">
+        <nav>
+            <a href="#Bio">Bio</a> | 
+            <a href="#Skills">Skills</a> | 
+            <a href="#Experience">Experience</a> | 
+            <a href="#Education">Education</a>
+        </nav>
 
-        <p>My name is Sofie Johnsson, I am 39 years old and live in Malmö with my sambo, son Sam (7) and daughter Sigrid (2). I also have a cat named Gus. Looking forward to start learning!</p>
+        <section>
+            <article>
+                <h2 id="Bio">Bio</h2>
+                <img class="profile-image" src="img/20230919_215701.jpg">
+                <p>My name is Sofie Johnsson, I am 39 years old and live in Malmö with my sambo, son Sam (7) and daughter Sigrid (2). I also have a cat named Gus. Looking forward to start learning!</p>
+            </article>
+        </section>
 
-        <div class="cv-section">
-            <h2>Experience</h2>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>Python</li>
-                <li>MySQL</li>
-                <li>AWS</li>
-            </ul>
-        </div>
-        <div class="cv-section">
-            <h2>Education</h2>
-            <ol>
-                <li>Grafisk Kommunikation, Mediegymnasiet Malmö, 2002-2005</li>
-                <li>Interaktionsdesign, Malmö University, 2005-2008</li>
-                <li>Medieinstitutet, 2025-</li>
-            </ol>
-        </div>
 
-        <a href="https://github.com/Sofie200" target="_blank">My Github</a>
+        <section>
+            <article>
+                <h2 id="Experience">Experience</h2>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Python</li>
+                    <li>MySQL</li>
+                    <li>AWS</li>
+                </ul>
+            </article>
+        </section>
+        <section>
+            <article>
+                <h2 id="Education">Education</h2>
+                <ol>
+                    <li>Grafisk Kommunikation, Mediegymnasiet Malmö, 2002-2005</li>
+                    <li>Interaktionsdesign, Malmö University, 2005-2008</li>
+                    <li>Medieinstitutet, 2025-</li>
+                </ol>
+            </article>
+        </section>
+        <section>
+            <article>
+                <h2 id="Skills">Skills</h2>
+                <ol>
+                    <li>Grafisk Kommunikation, Mediegymnasiet Malmö, 2002-2005</li>
+                    <li>Interaktionsdesign, Malmö University, 2005-2008</li>
+                    <li>Medieinstitutet, 2025-</li>
+                </ol>
+            </article>
+        </section>
 
-    </div>
+        <footer><a href="https://github.com/Sofie200" target="_blank">My Github</a></footer>
+
+    </main>
     
 </body>
 </html>
