--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 </head>
 <body>
 
-    <main>
-
+    <div id="wrapper">
         <header>
-            <h1>Sofie Johnsson</h1>
-            <p>New student at Medieinstitutet.<p>
-
+            <div id="headertxt">
+                <h1>Sofie Johnsson</h1>
+                <p>New student at Medieinstitutet.<p>                
+                <p>My name is Sofie Johnsson, I am 39 years old and live in Malmö with my sambo, son Sam (7) and daughter Sigrid (2). I also have a cat named Gus. Looking forward to start learning!</p>
+            </div>
+            <div id="headerimg">
+                <img class="profile-image" src="img/20230919_215701.jpg">
+            </div>
         </header>
 
         <nav>
@@ -23,52 +27,45 @@
             <a href="#Education">Education</a>
         </nav>
 
-        <section>
-            <article>
-                <h2 id="Bio">Bio</h2>
-                <img class="profile-image" src="img/20230919_215701.jpg">
-                <p>My name is Sofie Johnsson, I am 39 years old and live in Malmö with my sambo, son Sam (7) and daughter Sigrid (2). I also have a cat named Gus. Looking forward to start learning!</p>
-            </article>
-        </section>
+        <main>
 
+            <section>
+                <article>
+                    <h2 id="Experience">Experience</h2>
+                    <ul>
+                        <li>Service Reliability Technician<br>Efficy, 2019-2025</li>
+                        <li>Incident Manager<br>Apsis International AB, 2017-2019</li>
+                        <li>Email Designer<br>Apsis International AB, 2008-2017</li>
+                    </ul>
+                </article>
 
-        <section>
-            <article>
-                <h2 id="Experience">Experience</h2>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>Python</li>
-                    <li>MySQL</li>
-                    <li>AWS</li>
-                </ul>
-            </article>
-        </section>
-        <section>
-            <article>
-                <h2 id="Education">Education</h2>
-                <ol>
-                    <li>Grafisk Kommunikation, Mediegymnasiet Malmö, 2002-2005</li>
-                    <li>Interaktionsdesign, Malmö University, 2005-2008</li>
-                    <li>Medieinstitutet, 2025-</li>
-                </ol>
-            </article>
-        </section>
-        <section>
-            <article>
-                <h2 id="Skills">Skills</h2>
-                <ol>
-                    <li>Grafisk Kommunikation, Mediegymnasiet Malmö, 2002-2005</li>
-                    <li>Interaktionsdesign, Malmö University, 2005-2008</li>
-                    <li>Medieinstitutet, 2025-</li>
-                </ol>
-            </article>
-        </section>
+                <article>
+                    <h2 id="Education">Education</h2>
+                    <ul>
+                        <li>Medieinstitutet, 2025-</li>
+                        <li>Interaktionsdesign, Malmö University, 2005-2008</li>
+                        <li>Grafisk Kommunikation, Mediegymnasiet Malmö, 2002-2005</li>
+                    </ul>
+                </article>
+            </section>
+            <aside>
+                <article>
+                    <h2 id="Skills">Skills</h2>
+                    <ol>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>Python</li>
+                        <li>MySQL</li>
+                        <li>AWS</li>
+                    </ol>
+                </article>
+            </aside>
+
+        </main>
 
         <footer><a href="https://github.com/Sofie200" target="_blank">My Github</a></footer>
 
-    </main>
-    
+    </div>
 </body>
 </html>
