Finishing touches lecture 2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="hero">
         <header>
             <div id="headerimg">
-                <img class="profile-image" src="img/20230919_215701.jpg">
+                <img class="profile-image" src="img/305139433_10159655626795546_2659846789829574413_n.jpg">
             </div>
             <div id="headertxt">
                 <h1>Sofie Johnsson</h1>
@@ -41,24 +41,25 @@
             <section>
                 <article>
                     <h2 id="Bio">Bio</h2>
-                    <p>My name is Sofie Johnsson, I am 39 years old and live in Malmö with my sambo, son Sam (7) and daughter Sigrid (2). I also have a cat named Gus. Looking forward to start learning!</p>
+                    <p>My name is Sofie Johnsson, I am 39 years old and live in Malmö. My family consists of my sambo Ted, son Sam (7) and daughter Sigrid (2). We also have a Scottish Straight breed cat named Gus.</p>
+                    <p>I just started studying fullstack development at Medieinstitutet and I am super excited to start learning new things!</p>
                 </article>
                 
                 <article>
                     <h2 id="Experience">Experience</h2>
                     <ul>
-                        <li>Service Reliability Technician<br>Efficy, 2019-2025</li>
-                        <li>Incident Manager<br>Apsis International AB, 2017-2019</li>
-                        <li>Email Designer<br>Apsis International AB, 2008-2017</li>
+                        <li><h3>2019-2025</h3><span class="bolder">Reliability Technician</span>, Efficy</li>
+                        <li><h3>2017-2019</h3><span class="bolder">Incident Manager</span>, Apsis International AB</li>
+                        <li><h3>2008-2017</h3><span class="bolder">Email Designer</span>, Apsis International AB</li>
                     </ul>
                 </article>
 
                 <article>
                     <h2 id="Education">Education</h2>
                     <ul>
-                        <li>Medieinstitutet, 2025-</li>
-                        <li>Interaktionsdesign, Malmö University, 2005-2008</li>
-                        <li>Grafisk Kommunikation, Mediegymnasiet Malmö, 2002-2005</li>
+                        <li><h3>2025-Now</h3><span class="bolder">Fullstack development</span>, Medieinstitutet</li>
+                        <li><h3>2005-2008</h3><span class="bolder">Interaction design (Bachelor)</span>, Malmö University</li>
+                        <li><h3>2002-2005</h3><span class="bolder">Graphic design</span>, Mediegymnasiet Malmö</li>
                     </ul>
                 </article>
             </section>
@@ -66,20 +67,23 @@
                 <article>
                     <h2 id="Skills">Skills</h2>
                     <ol>
-                        <li>HTML</li>
-                        <li>CSS</li>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>Usability</li>
                         <li>JavaScript</li>
                         <li>Python</li>
                         <li>MySQL</li>
                         <li>AWS</li>
+                        <li>Web Design</li>
+                        <li>Incident Management</li>
                     </ol>
                 </article>
             </aside>
-
         </main>
-
-        <footer>Copyright &copy; aeSofie</footer>
-
     </div>
+
+    <footer>
+        Copyright &copy; aeSofie
+    </footer>
 </body>
 </html>
